--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">B.Tech Computer Science & Enginerring - Big Data Analytics</h3>
-                            <div class="subheading mb-3">Institute of Computer Technology - Ganpat University</div>
+                            <div class="subheading mb-3">Institute of Computer Technology - Ganpat University | Ahmedabad-Gujarat, India</div>
 <!--				<div><h4>Grades : </h4></div>-->
 							<p>CGPA: 7.20 </p>
                         </div>
@@ -116,7 +116,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Higher Secondary School(12<sup>th</sup>)</h3>
-                            <div class="subheading mb-3"> Infocity Junior Science College (GSEB)</div>
+                            <div class="subheading mb-3"> Infocity Junior Science College (GSEB) | Gandhinagar-Gujarat, India</div>
                             <p>Percentage: 50.30 %</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2019 - 2020</span></div>
