--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <a class="social-icon" target="_blank" href="https://www.linkedin.com/in/ujjval-patel777/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" target="_blank" href="https://www.behance.net/ujjvalpatel"><i class="fab fa-behance"></i></a>
                         <a class="social-icon" target="_blank" href="https://github.com/Ujjval26"><i class="fab fa-github"></i></a>
-			            <a class="social-icon" target="_blank" href="https://drive.google.com/file/d/1e7VRh3MUNWdd6RlPPTZBi7wJ267LjZM0/view" alt="Resume"><i class="fas fa-file-pdf"></i></a>
+			           <!-- <a class="social-icon" target="_blank" href="https://drive.google.com/file/d/1e7VRh3MUNWdd6RlPPTZBi7wJ267LjZM0/view" alt="Resume"><i class="fas fa-file-pdf"></i></a>-->
                     </div>
                 </div>
             </section>
