--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <span class="text-primary">Ujjval Patel</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Gandhinagar-Gujarat, India  · +91-9825728000 ·
+                        Gandhinagar, Gujarat, India  · +91-9825728000 ·
                         <a href="mailto:meet.vaghasia@gmail.com">ujjvalpatel7262@gmail.com</a>
                     </div>
                     <p class="lead mb-5">Looking for a career-building opportunity in Data Analytics and UI/UX Design to thoroughly utilize my interpersonal skills along with my technical proficiencies considering any challenges appointed to me and to exhibit adaptiveness.</p>
