--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <a class="social-icon" target="_blank" href="https://www.linkedin.com/in/ujjval-patel777/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" target="_blank" href="https://github.com/Ujjval26"><i class="fab fa-github"></i></a>
                         <a class="social-icon" target="_blank" href="https://www.behance.net/ujjvalpatel"><i class="fab fa-behance"></i></a>
-			           <!-- <a class="social-icon" target="_blank" href="https://drive.google.com/file/d/1e7VRh3MUNWdd6RlPPTZBi7wJ267LjZM0/view" alt="Resume"><i class="fas fa-file-pdf"></i></a>-->
+			           <!--<a class="social-icon" target="_blank" href="https://drive.google.com/file/d/1e7VRh3MUNWdd6RlPPTZBi7wJ267LjZM0/view" alt="Resume"><i class="fas fa-file-pdf"></i></a>-->
                     </div>
                 </div>
             </section>
@@ -106,7 +106,7 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">B.Tech Computer Science & Enginerring - Big Data Analytics</h3>
+                            <h3 class="mb-0">B.Tech Computer Science & Engineering - Big Data Analytics</h3>
                             <div class="subheading mb-3">Institute of Computer Technology - Ganpat University | Ahmedabad, Gujarat, India</div>
 <!--				<div><h4>Grades : </h4></div>-->
 							<p>CGPA: 7.20 </p>
