--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         Gandhinagar, Gujarat, India  · +91-9825728000 ·
                         <a href="mailto:meet.vaghasia@gmail.com">ujjvalpatel7262@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">Looking for a career-building opportunity in Data Analytics and UI/UX Design to thoroughly utilize my interpersonal skills along with my technical proficiencies considering any challenges appointed to me and to exhibit adaptiveness.</p>
+                    <p class="lead mb-5">Looking for a career-building opportunity in Data Analysis and UI/UX Design to thoroughly utilize my interpersonal skills along with my technical proficiencies considering any challenges appointed to me and to exhibit adaptiveness.</p>
                     <div class="social-icons">
                         <a class="social-icon" target="_blank" href="https://www.linkedin.com/in/ujjval-patel777/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" target="_blank" href="https://github.com/Ujjval26"><i class="fab fa-github"></i></a>
@@ -115,8 +115,8 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Higher Secondary School(12<sup>th</sup>)</h3>
-                            <div class="subheading mb-3"> Infocity Junior Science College (GSEB) | Gandhinagar, Gujarat, India</div>
+                            <h3 class="mb-0">Higher Secondary School(12<sup>th</sup> GSEB)</h3>
+                            <div class="subheading mb-3"> Infocity Junior Science College | Gandhinagar, Gujarat, India</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2019 - May 2020</span></div>
                     </div>
